--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,25 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/unsplash_cssvezachvq"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="528dp"
-        android:layout_height="805dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/unsplash_cssvezachvq"
-        tools:layout_editor_absoluteX="-59dp" />
-
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
+        android:gravity="center"
         android:text="Hello World!"
-        android:textSize="100dp"
         android:textColor="@color/white"
+        android:textSize="100dp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -36,21 +30,32 @@
         android:id="@+id/button"
         android:layout_width="363dp"
         android:layout_height="60dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:backgroundTint="@color/laranjaVolait"
-        android:text="Button"
+        android:text="login"
         android:textColor="@color/white"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="589dp" />
+        android:textSize="50px"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.891" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="305dp"
         android:layout_height="20dp"
+        android:layout_marginStart="53dp"
+        android:layout_marginEnd="53dp"
         android:text="Ainda não possui cadastro? Cadastre-se!"
         android:textColor="@color/white"
         android:textSize="16dp"
-        tools:layout_editor_absoluteX="53dp"
-        tools:layout_editor_absoluteY="649dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
