--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,61 +18,88 @@
         android:textSize="50px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.517"
+        app:layout_constraintHorizontal_bias="0.586"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.85" />
+        app:layout_constraintVertical_bias="0.82" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="375dp"
-        android:layout_height="21dp"
+        android:layout_width="345dp"
+        android:layout_height="28dp"
         android:layout_marginStart="53dp"
+        android:layout_marginTop="77dp"
         android:layout_marginEnd="53dp"
-        android:layout_marginBottom="76dp"
+        android:layout_marginBottom="84dp"
+        android:onClick="TelaCadastro1"
         android:text="Ainda não possui cadastro? Cadastre-se!"
         android:textColor="@color/black"
-        android:textSize="19dp"
+        android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toTopOf="@+id/button2"
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="291dp"
-        android:layout_height="274dp"
-        app:srcCompat="@drawable/bro"
-        tools:layout_editor_absoluteX="75dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:layout_width="262dp"
+        android:layout_height="263dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginEnd="74dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.087"
+        app:srcCompat="@drawable/bro" />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
         android:layout_width="363dp"
         android:layout_height="63dp"
+        android:layout_marginStart="39dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:hint="Login"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="39dp"
-        tools:layout_editor_absoluteY="416dp" />
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="359dp"
         android:layout_height="66dp"
+        android:layout_marginStart="41dp"
+        android:layout_marginEnd="40dp"
         android:ems="10"
         android:hint="Senha"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="41dp"
-        tools:layout_editor_absoluteY="513dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.68" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/imageView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/Login"
-        tools:layout_editor_absoluteX="75dp"
-        tools:layout_editor_absoluteY="326dp" />
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="276dp"
+        android:layout_marginBottom="412dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:layout_constraintVertical_bias="0.055"
+        app:srcCompat="@drawable/login" />
 </androidx.constraintlayout.widget.ConstraintLayout>
