--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,57 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/unsplash_cssvezachvq"
+    android:background="@drawable/splash"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="328dp"
+        android:layout_height="253dp"
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:gravity="center"
-        android:text="Habitant amor leo etiam mi"
+        android:text="Sejam Bem Vindos"
         android:textColor="@color/white"
         android:textSize="70dp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.384" />
+        app:layout_constraintVertical_bias="0.439" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="363dp"
-        android:layout_height="60dp"
+        android:layout_width="344dp"
+        android:layout_height="65dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/laranjaVolait"
+        android:onClick="TelaLogin"
         android:text="login"
         android:textColor="@color/white"
         android:textSize="50px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.874" />
+        app:layout_constraintVertical_bias="0.81" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="305dp"
+        android:layout_width="354dp"
         android:layout_height="20dp"
         android:layout_marginStart="53dp"
         android:layout_marginEnd="53dp"
+        android:onClick="TelaCadastro"
         android:text="Ainda não possui cadastro? Cadastre-se!"
         android:textColor="@color/white"
-        android:textSize="16dp"
+        android:textSize="19dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.408"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button"
         app:layout_constraintVertical_bias="0.0" />
@@ -64,19 +66,17 @@
         android:layout_width="111dp"
         android:layout_height="34dp"
         android:layout_marginStart="150dp"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="150dp"
-        android:layout_marginBottom="116dp"
         android:gravity="center"
         android:text="Volait"
         android:textColor="@color/white"
         android:textSize="80px"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.164" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
