--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="laranjaVolait">#E46F44</color>
     <color name="backgray">#E5E5E5</color>
+    <color name="gray">#6B6E70</color>
 </resources>
