--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -32,7 +32,7 @@
         android:layout_height="58dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:backgroundTint="@color/laranjaVolait"
+        android:backgroundTint="@color/gray"
         android:onClick="TelaLogin"
         android:text="login"
         android:textColor="@color/white"
