--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -33,7 +33,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.872"
-        app:srcCompat="@drawable/cadastro" />
+        app:srcCompat="@drawable/cadastroo" />
 
     <TextView
         android:id="@+id/textView5"
