--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,52 +11,98 @@
         android:id="@+id/imageView9"
         android:layout_width="559dp"
         android:layout_height="78dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/menu__1_"
-        tools:layout_editor_absoluteX="-69dp"
-        tools:layout_editor_absoluteY="-30dp" />
+        tools:layout_editor_absoluteY="-12dp" />
 
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="559dp"
         android:layout_height="78dp"
-        app:srcCompat="@drawable/menu__1_"
-        tools:layout_editor_absoluteX="-37dp"
-        tools:layout_editor_absoluteY="674dp" />
+        android:layout_marginTop="672dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/menu__1_" />
 
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="54dp"
         android:layout_height="55dp"
         android:backgroundTint="#FFFFFF"
-        app:srcCompat="@drawable/home__1_"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="675dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/home__1_" />
 
     <ImageButton
         android:id="@+id/imageButton2"
         android:layout_width="54dp"
         android:layout_height="55dp"
         android:backgroundTint="#FFFFFF"
-        app:srcCompat="@drawable/explorar"
-        tools:layout_editor_absoluteX="124dp"
-        tools:layout_editor_absoluteY="675dp" />
+        android:onClick="TelaGeoLoc"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.174"
+        app:layout_constraintStart_toEndOf="@+id/imageButton"
+        app:srcCompat="@drawable/explorar" />
 
     <ImageButton
         android:id="@+id/imageButton3"
         android:layout_width="54dp"
         android:layout_height="55dp"
+        android:layout_marginBottom="1dp"
         android:backgroundTint="#FFFFFF"
-        app:srcCompat="@drawable/favoritos"
-        tools:layout_editor_absoluteX="233dp"
-        tools:layout_editor_absoluteY="675dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.374"
+        app:layout_constraintStart_toEndOf="@+id/imageButton2"
+        app:srcCompat="@drawable/favoritos" />
 
     <ImageButton
         android:id="@+id/imageButton4"
         android:layout_width="54dp"
         android:layout_height="55dp"
         android:backgroundTint="#FFFFFF"
-        app:srcCompat="@drawable/perfil"
-        tools:layout_editor_absoluteX="350dp"
-        tools:layout_editor_absoluteY="675dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/perfil" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName7"
+        android:layout_width="266dp"
+        android:layout_height="40dp"
+        android:backgroundTint="@color/"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="85dp" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="43dp"
+        android:layout_height="39dp"
+        app:srcCompat="@android:drawable/ic_search_category_default"
+        tools:layout_editor_absoluteX="29dp"
+        tools:layout_editor_absoluteY="85dp" />
+
+    <ImageView
+        android:id="@+id/imageView11"
+        android:layout_width="58dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView9"
+        app:srcCompat="@drawable/volaitmain" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
