--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="backgray">#E5E5E5</color>
     <color name="gray">#6B6E70</color>
     <color name="yellow_cupom">#FFF975</color>
+    <color name="laranja1">#FF9575</color>
 </resources>
