--- a/app/src/main/res/layout/cupom200item.xml
+++ b/app/src/main/res/layout/cupom200item.xml
@@ -7,12 +7,12 @@
 
 
     <ImageView
-        android:id="@+id/imageViewBackB"
+        android:id="@+id/imageView6"
         android:layout_width="402dp"
         android:layout_height="417dp"
-        app:srcCompat="@drawable/cupom_background_blue"
+        app:srcCompat="@drawable/cupom_background_rose"
         tools:layout_editor_absoluteX="-7dp"
-        tools:layout_editor_absoluteY="51dp" />
+        tools:layout_editor_absoluteY="51dp"/>
 
     <ImageView
         android:id="@+id/imageView13"
@@ -27,7 +27,7 @@
         android:layout_width="195dp"
         android:layout_height="56dp"
         android:fontFamily="@font/inter_semibold"
-        android:text="R$ 50,00"
+        android:text="R$ 200,00"
         android:textColor="@color/yellow_cupom"
         android:textFontWeight="900"
         android:textSize="38dp"
