--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -46,6 +46,7 @@
         android:layout_width="54dp"
         android:layout_height="55dp"
         android:backgroundTint="#FFFFFF"
+        android:onClick="Telahome"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.044"
@@ -84,7 +85,7 @@
         android:layout_width="54dp"
         android:layout_height="55dp"
         android:backgroundTint="#FFFFFF"
-        android:onClick="TelaGeoLoc"
+        android:onClick="TelaCupom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.181"
@@ -93,8 +94,8 @@
         app:srcCompat="@drawable/cupons" />
 
     <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="600dp"
+        android:layout_width="395dp"
+        android:layout_height="601dp"
         android:layout_marginStart="3dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="3dp"
