--- a/app/src/main/res/layout/cupom100item.xml
+++ b/app/src/main/res/layout/cupom100item.xml
@@ -15,7 +15,7 @@
         tools:layout_editor_absoluteY="51dp" />
 
     <ImageView
-        android:id="@+id/imageView13"
+        android:id="@+id/btnCupomDetalhes"
         android:layout_width="98dp"
         android:layout_height="34dp"
         app:srcCompat="@drawable/saibamaisbtn"
